# tantivy-aggregations

./: Cargo.toml  README.md
benches/: lib.rs
src/: agg.rs  either.rs  filter.rs  fixtures.rs  histogram.rs  lib.rs  metric.rs  percentile.rs  post_filter.rs  searcher.rs  terms.rs  tuple.rs
src/bucket/: histogram.rs  mod.rs  terms.rs
src/metric/: count.rs  minmax.rs  mod.rs  percentile.rs  sum.rs
test_fixtures/: Cargo.toml
test_fixtures/src/: lib.rs
