[package]
name = "tantivy-aggregations"
version = "0.0.1"
authors = ["Alexander Koval <kovalidis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tantivy = "0.11.3"
tantivy = { git = "https://github.com/anti-social/tantivy", rev = "eba30d47" }

[dev-dependencies]
rand = "0.7"
rand_pcg = "0.2"
test_fixtures = { path = "test_fixtures" }
